[gd_scene load_steps=5 format=3 uid="uid://siqlv4rdtwlk"]

[ext_resource type="Script" path="res://Scripts/photo2.gd" id="1_sn55f"]
[ext_resource type="Texture2D" uid="uid://bo3ltxqced1qx" path="res://Assets/transparentPlaceholder.png" id="2_2oa2f"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_y2mje"]
size = Vector2(384, 216)

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_bkenl"]

[node name="Photo" type="Node2D"]
script = ExtResource("1_sn55f")

[node name="PhotoSprite" type="Sprite2D" parent="."]
texture = ExtResource("2_2oa2f")

[node name="Area2D" type="Area2D" parent="PhotoSprite"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PhotoSprite/Area2D"]
shape = SubResource("RectangleShape2D_y2mje")

[node name="StarSprite1" type="Sprite2D" parent="PhotoSprite"]
position = Vector2(-173, 91)
scale = Vector2(26.48, 24.16)
texture = SubResource("PlaceholderTexture2D_bkenl")

[node name="StarSprite2" type="Sprite2D" parent="PhotoSprite"]
position = Vector2(-141, 91)
scale = Vector2(26.48, 24.16)
texture = SubResource("PlaceholderTexture2D_bkenl")

[node name="StarSprite3" type="Sprite2D" parent="PhotoSprite"]
position = Vector2(-109, 91)
scale = Vector2(26.48, 24.16)
texture = SubResource("PlaceholderTexture2D_bkenl")

[node name="DeletePhotoButton" type="Button" parent="PhotoSprite"]
offset_left = 164.0
offset_top = -102.0
offset_right = 296.0
offset_bottom = 179.0
scale = Vector2(0.152295, 0.0673539)
theme_override_font_sizes/font_size = 200
text = "X"

[connection signal="mouse_entered" from="PhotoSprite/Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="PhotoSprite/Area2D" to="." method="_on_area_2d_mouse_exited"]
[connection signal="pressed" from="PhotoSprite/DeletePhotoButton" to="." method="_on_delete_photo_button_pressed"]
